@@ -1114,6 +1114,10 @@ fixed TermBindingItem bug in ADL parser</li>
   <li><b>2005-12-02</b>
 better support for archetype ontology output, contributed by Mattias and Johan</li>
 
+  <li><b>2006-03-21</b>
+fixed a bug in the constructor of ArchetypeOntology, thanks to Jonas and Joakim</li>
+
+
 
 
 </ul>
@@ -1475,71 +1479,183 @@ NLea
 
 
 
-    </tr>
-
-
-    <tr>
-
-
-
-      <td class="table_cell_left_heading" style="vertical-align: top; background-color: rgb(255, 255, 153); height: 57px;"> Update AM/RM Implementation</td>
-
-
-
-      <td style="vertical-align: top; background-color: rgb(255, 255, 204); height: 57px;">
-        Update the Information Model and Archetype Model implementation according to the latest specifications
-      </td>
-
-
-
-      <td style="vertical-align: top; background-color: rgb(255, 255, 204); height: 57px;"><br />
-        RChen
-      </td>
-
-
-
-    </tr>
-
-
-    <tr>
-
-
-
-      <td class="table_cell_left_heading" style="vertical-align: top; background-color: rgb(255, 255, 153); height: 57px;"> Update ADL Parser</td>
-
-
-
-      <td style="vertical-align: top; background-color: rgb(255, 255, 204); height: 57px;">
-        Update the Java ADL Parser according to the lastest ADL and AOM specification
-      </td>
-
-
-
-      <td style="vertical-align: top; background-color: rgb(255, 255, 204); height: 57px;">
-        RChen
-      </td>
-
-
-
-    </tr>
-
-
-
-
-
-  
-  
-  
-  
-  
-  
+    </tr>  
   
   
   </tbody>
 </table>
 
+<p/>
+
+<table style="text-align: left; width: 849px; height: 192px;" border="1" cellpadding="2" cellspacing="2">
 
 
+
+
+
+
+
+
+  <tbody>
+
+
+
+
+
+
+
+
+    <tr>
+
+
+
+
+
+
+
+
+      <td class="footer table_cell_left_heading" colspan="3" rowspan="1" style="vertical-align: top; background-color: rgb(204, 204, 255);">
+      
+      
+      
+      
+      
+      
+      
+      <div style="text-align: center;">
+      
+      </div>
+
+
+
+
+
+
+
+      
+      
+      
+      
+      
+      
+      
+      <div style="text-align: center;"><span class="table_cell_top_heading">ADL Parser</span></div>
+
+
+
+
+
+
+
+
+      
+      </td>
+
+
+
+
+
+
+
+
+    </tr>
+
+
+
+
+
+
+
+
+    <tr>
+
+
+
+
+
+
+
+
+      <td class="table_cell_top_heading" style="vertical-align: top; background-color: rgb(204, 204, 255);">
+      Job
+      </td>
+
+
+
+
+
+
+
+
+      <td class="table_cell_top_heading" style="vertical-align: top; background-color: rgb(204, 204, 255);">
+      Description
+      </td>
+
+
+
+
+
+
+      <td class="table_cell_top_heading" style="vertical-align: top; background-color: rgb(204, 204, 255);">
+      Who
+      </td>
+
+
+
+
+
+
+
+
+    </tr>
+
+
+
+
+
+
+
+
+    <tr>
+
+
+
+
+
+
+
+
+      <td class="table_cell_left_heading" style="vertical-align: top; background-color: rgb(255, 255, 153); height: 60px;">Upgrade the ADL parser</td>
+
+
+
+
+
+
+
+
+      <td style="vertical-align: top; background-color: rgb(255, 255, 204); height: 60px;">
+      Bring the ADL parser to the latest ADL specifications </td>
+
+
+
+
+
+
+      <td style="vertical-align: top; background-color: rgb(255, 255, 204); height: 60px;">Rong Chen</td>
+
+
+
+
+
+
+
+
+    </tr>  
+  
+  
+  </tbody>
+</table>
 
 
 
